bk_ida/gccida/g0/can_combine_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1419:13: error: expected identifier or '('
 struct set = 0LL; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1427:13: error: expected identifier or '('
 struct set = ( rtx)insn[2]; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1445:7: error: expected expression
if (  struct set ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1447:13: error: expected identifier or '('
 struct set = elt; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1456:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
i3pat = ( rtx)i3[2]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1482:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)seta[1]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1527:52: error: use of undeclared identifier 'machine_mode'
&& !ix86_hard_regno_mode_ok( dest->fld[0].rtint, ( machine_mode)*( ( unsigned __int8 *)dest + 2)) 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/combine.c:1529:51: error: use of undeclared identifier 'machine_mode'
&& !ix86_hard_regno_mode_ok( src->fld[0].rtint, ( machine_mode)*( ( unsigned __int8 *)src + 2))) ) 
                                                  ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/can_combine_p/src/obj/combine.o] Error 1
